--- a/index.html
+++ b/index.html
@@ -7,9 +7,43 @@
 </head>
 <body>
     <h1>Início do programa</h1>
+    <h2>Loja de Motocicletas</h2>
+    <figure>
+        <img width="300" src="imagemDeMoto.jpeg" alt="">
+    </figure>
+
+    <h3>Tabela de motocicletas</h3>
+    <table border="3">
+        <tr>
+            <th>Honda Shadow 750</th>
+            <th>Yamaha YZ 250F</th>
+            <th>Harley-Davidson Sportster 883</th>
+            <th>BMW C 600</th>
+            <th>Kawasaki Z 750</th>
+        </tr>
+        <tr>
+            <td><img width="200" src="hondaShadow750.jpeg" alt=""></td>
+            <td><img width="200" src="yamahaYz250F.jpeg" alt=""></td>
+            <td><img width="200" src="harley-DavidsonSportster883.jpeg" alt=""></td>
+            <td><img width="200" src="bmwC600.jpeg" alt=""></td>
+            <td><img width="200" src="kawasakiZ750.jpeg" alt=""></td>
+        </tr>
+        <tr>
+            <td>2014</td>
+            <td>2023</td>
+            <td>2013</td>
+            <td>2014</td>
+            <td>2012</td>
+        </tr>
+        <tr>
+            <td>A Shadow 750 é equipada com um motor que proporciona força desde as baixas rotações, além de ser resistente, de manutenção mínima.</td>
+            <td>A moto penta campeã do brasileiro de motocross</td>
+            <td>Motor de dois cilindros em “V” de 55 centímetros cúbicos ou 883cc e comando simples no cabeçote e refrigeração a ar. Foi considerada a primeira "superbike" da HD.</td>
+            <td>Esse modelo recebeu o acabamento padrão de uma moto BMW, para uma scooter.</td>
+            <td>A Kawasaki Z 750 é uma motocicleta naked de quatro cilindros em linha de 750 cc. O modelo foi lançado mundialmente como uma motocicleta “econômica”.</td>
+        </tr>
+    </table>
+
     
-    
-    <!--Chamando Javascript Exerno-->
-    <script src="script.js"></script>
 </body>
 </html>
